<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:orientation="vertical"
	android:gravity="center"
	android:background="#00BAAC">

	<ScrollView
		android:fadingEdge="none"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content">

		<FrameLayout
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:measureAllChildren="true"
			android:foregroundGravity="center">

			<LinearLayout
				android:layout_height="match_parent"
				android:layout_width="match_parent"
				android:orientation="vertical"
				android:gravity="center">

				<com.bloody.badboy.MaterialRipple
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="12dp">

					<Button
						android:layout_height="wrap_content"
						android:text="@string/restart_systemui"
						android:layout_width="match_parent"
						android:id="@+id/restartui"
						android:background="@drawable/button"
						android:textColor="#009087"
						android:height="50dp"
						android:maxWidth="400dp"/>

				</com.bloody.badboy.MaterialRipple>

				<com.bloody.badboy.MaterialRipple
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="12dp">

					<Button
						android:layout_height="wrap_content"
						android:text="@string/restart_settings"
						android:layout_width="match_parent"
						android:id="@+id/restart_settings"
						android:background="@drawable/button"
						android:textColor="#009087"
						android:height="50dp"/>

				</com.bloody.badboy.MaterialRipple>

				<com.bloody.badboy.MaterialRipple
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="12dp">

					<Button
						android:layout_height="wrap_content"
						android:text="@string/soft_reboot"
						android:layout_width="match_parent"
						android:id="@+id/soft_reboot"
						android:background="@drawable/button"
						android:textColor="#009087"
						android:height="50dp"/>

				</com.bloody.badboy.MaterialRipple>

				<com.bloody.badboy.MaterialRipple
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="12dp">

					<Button
						android:layout_height="wrap_content"
						android:text="@string/reboot"
						android:layout_width="match_parent"
						android:id="@+id/reboot"
						android:background="@drawable/button"
						android:textColor="#009087"
						android:height="50dp"/>

				</com.bloody.badboy.MaterialRipple>

				<com.bloody.badboy.MaterialRipple
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="12dp">

					<Button
						android:layout_height="wrap_content"
						android:text="@string/reboot_recovery"
						android:layout_width="match_parent"
						android:id="@+id/reboot_recovery"
						android:background="@drawable/button"
						android:textColor="#009087"
						android:height="50dp"/>

				</com.bloody.badboy.MaterialRipple>

				<com.bloody.badboy.MaterialRipple
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="12dp">

					<Button
						android:layout_height="wrap_content"
						android:text="@string/power_off"
						android:layout_width="match_parent"
						android:id="@+id/power_off"
						android:background="@drawable/button"
						android:textColor="#009087"
						android:height="50dp"/>

				</com.bloody.badboy.MaterialRipple>
<com.bloody.badboy.MaterialRipple
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="12dp">

					<Button
						android:layout_height="wrap_content"
						android:text="Calibtate battery"
						android:layout_width="match_parent"
						android:id="@+id/battery_calibration"
						android:background="@drawable/button"
						android:textColor="#009087"
						android:height="50dp"/>

				</com.bloody.badboy.MaterialRipple>

			</LinearLayout>

		</FrameLayout>

	</ScrollView>

</LinearLayout>

